--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'Puppets -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'War -- Juvenile fiction'
+- GITenberg
 title: 'The Heart of Pinocchio: New Adventures of the Celebrated Little Puppet'
 url: http://www.gutenberg.org/ebooks/41446
